# battleships

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
battleships_client/src/: main.cpp  mainwindow.h  mainwindow.ui
battleships_server/src/: main.cpp  stdafx.h
battleships_server/src/game/: board.h  game.h  game_hub.h  lobby.h  match.h  message.h
battleships_server/src/net/: client.h  connection.h  publisher.h  websocket_server.h
battleships_server/src/util/: non_owning_ptr.h  string.h  thread_pool.h
